los crud y vistar con sus condiciones

--- a/L01P02_2022CG650/Views/facultades/Index.cshtml
+++ b/L01P02_2022CG650/Views/facultades/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<L01P02_2022CG650.Models.FacultadModel>
+﻿@model IEnumerable<L01P02_2022CG650.Models.facultades>
 
 @{
     ViewData["Title"] = "Index";
