--- a/L01P02_2022CG650/Views/Shared/_Layout.cshtml
+++ b/L01P02_2022CG650/Views/Shared/_Layout.cshtml
@@ -25,6 +25,19 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="alumnosModels" asp-action="Index">Alumnos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="facultades" asp-action="Index">Faculdad</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="materiasModels" asp-action="Index">Materias</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="departamentosModels" asp-action="Index">Departamentos</a>
+                        </li>
+
                     </ul>
                 </div>
             </div>
@@ -38,7 +51,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2025 - L01P02_2022CG650 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2025 - L01P02_2022CG650 Hecho por por JORGE RENE CASTRO GOMEZ - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
