--- a/L01P02_2022CG650/Views/facultades/Delete.cshtml
+++ b/L01P02_2022CG650/Views/facultades/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model L01P02_2022CG650.Models.FacultadModel
+﻿@model L01P02_2022CG650.Models.facultades
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>FacultadModel</h4>
+    <h4>facultades</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
