--- a/L01P02_2022CG650/Views/facultades/Details.cshtml
+++ b/L01P02_2022CG650/Views/facultades/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model L01P02_2022CG650.Models.FacultadModel
+﻿@model L01P02_2022CG650.Models.facultades
 
 @{
     ViewData["Title"] = "Details";
@@ -7,7 +7,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>FacultadModel</h4>
+    <h4>facultades</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
