--- a/L01P02_2022CG650/Views/facultades/Edit.cshtml
+++ b/L01P02_2022CG650/Views/facultades/Edit.cshtml
@@ -1,24 +1,25 @@
-﻿@model L01P02_2022CG650.Models.FacultadModel
+﻿@model L01P02_2022CG650.Models.facultades
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
 
-<h1>Create</h1>
+<h1>Edit</h1>
 
-<h4>FacultadModel</h4>
+<h4>facultades</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="id" />
             <div class="form-group">
                 <label asp-for="facultad" class="control-label"></label>
                 <input asp-for="facultad" class="form-control" />
                 <span asp-validation-for="facultad" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
